--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "karma start"
   },
   "keywords": [],
-  "author": "your_name <your.email@domain.com>",
+  "author": "ruly.anggriawan@live.com",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.10.5",
