--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,6 @@
         "sourceType": "module"
     },
     "rules": {
+        "no-underscore-dangle": ["error", {"allowAfterThis": true}]
     }
 }
